<resources>
    <string name="app_name">Kalkulator BMI</string>

    <string name="bmi_intro">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau
        tidak. Cobalah sekarang!
    </string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini.</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beratbadan">Berat Badan (kg)</string>
    <string name="nomor">0</string>
    <string name="tinggi">Tinggi Badan (cm)</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="b_hitung">Hitung</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="kategori">IDEAL</string>
    <string name="nilai">Nilai BMI :</string>
    <string name="b_bagikan">Bagikan</string>
    <string name="b_lihat">Lihat Saran</string>
</resources>
